--- a/web/pom.xml
+++ b/web/pom.xml
@@ -107,6 +107,7 @@
     </dependencies>
 
     <build>
+        <finalName>micro</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
