--- a/register/src/main/resources/application.yml
+++ b/register/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: 注册中心
+    name: 注册中心...
 server:
   port: 8000
 eureka:
@@ -10,15 +10,4 @@ eureka:
     service-url:
       defaultZone: http://localhost:${server.port}/eureka/
 
-#spring:
-#  application:
-#    name: spring-cloud-eureka
-#  profiles: peer1
-#server:
-#  port: 8000
-#eureka:
-#  instance:
-#    hostname: peer1
-#  client:
-#    serviceUrl:
-#      defaultZone: http://peer2:8001/eureka/,http://peer3:8002/eureka/
+
