--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: web端
   mvc:
     static-path-pattern: /**
     #数据源配置
@@ -21,19 +23,10 @@ server:
 logging:
   config: classpath:logback-boot.xml
   level:
-    com.sfd.mapper: debug
     root: info
-web:
-  upload-path: C:\Users\zhangds\git\hexo-test\public
-  server: 10.140.245.41:9999
-mybatis:
-  #mapper-locations: classpath:mappers/*Mapper.xml  #注意：一定要对应mapper映射xml文件的所在路径
-  type-aliases-package: com.sfd.model  # 注意：对应实体类的路径
-#pagehelper
-pagehelper:
-  helperDialect: mysql
-  reasonable: true
-  supportMethodsArguments: true
-  params: count=countSql
-  returnPageInfo: check
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8000/eureka/
+
 
