--- a/pom.xml
+++ b/pom.xml
@@ -65,41 +65,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-                <!--<version>${spring.cloud.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-eureka-server</artifactId>-->
-                <!--<version>>${spring.cloud.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-netflix-hystrix</artifactId>-->
-                <!--<version>>${spring.cloud.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-                <!--<version>2.1.2.RELEASE</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>com.alibaba</groupId>-->
-                <!--<artifactId>druid</artifactId>-->
-                <!--<version>${druid.version}</version>-->
-            <!--</dependency>-->
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>1.1.10</version>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>joda-time</groupId>-->
-                <!--<artifactId>joda-time</artifactId>-->
-                <!--<version>2.9.6</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.6</version>
+            </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
