--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -42,6 +42,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
