--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
                 <version>6.0.6</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+                <version>0.2.1.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
