--- a/provider-api/pom.xml
+++ b/provider-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>provider-api</artifactId>
     <description>api接口</description>
     <dependencies>
         <dependency>
